--- a/app/src/main/res/layout/activity_catalogue.xml
+++ b/app/src/main/res/layout/activity_catalogue.xml
@@ -33,6 +33,15 @@
                     android:layout_alignParentLeft="true"
                     android:src="@drawable/app_logo_inverted" />
 
+                <ImageView
+                    android:id="@+id/git_button"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/git"
+                    android:tint="@color/white"
+                    android:layout_marginTop="@dimen/standard_half_spacer"
+                    android:layout_marginRight="@dimen/standard_spacer"
+                    android:layout_alignParentRight="true"/>
                 <Button
                     android:id="@+id/launch_web_button"
                     android:layout_width="wrap_content"
